--- a/tutorial/src/resample.Rmd
+++ b/tutorial/src/resample.Rmd
@@ -330,9 +330,16 @@ For each of the pre-defined [&Task]s **mlr** provides pre-defined
 These instances are occasionally used in the remainder of this tutorial.
 
 ```{r echo=FALSE, results="asis"}
+linkTask = function(x) {
+	x = unlist(strsplit(as.character(x), split = " "))
+	x[2] = gsub("[(]", "", x[2])
+	x[2] = gsub("[)]", "", x[2])
+    collapse(sprintf("[%1$s](http://www.rdocumentation.org/packages/mlr/functions/%2$s/)", x[1], x[2]), sep = "<br />")
+}
 d = data(package = "mlr")
 d = d$results
 df = as.data.frame(d[seq(1,nrow(d),2), c("Item", "Title")])
+df$Item = sapply(df$Item, linkTask)
 names(df)[1] = "Task"
 pandoc.table(df, style = "rmarkdown", split.tables = Inf, split.cells = Inf,
 	justify = c("left", "left"))
