--- a/tutorial/src/over_and_undersampling.Rmd
+++ b/tutorial/src/over_and_undersampling.Rmd
@@ -14,7 +14,7 @@ Now let's see what the effect is for a classification task:
 data.even = rbind(
     data.frame(x = rnorm(50, mean = 1), class = "A"),
     data.frame(x = rnorm(50, mean = 2), class = "B"))
-task = makeClassifTask(data = data, target = "class")
+task = makeClassifTask(data = data.even, target = "class")
 task.over = oversample(task, rate = 4)
 task.under = undersample(task, rate = 1/4)
 lrn = makeLearner("classif.PART")
