--- a/tutorial/src/parallelization.Rmd
+++ b/tutorial/src/parallelization.Rmd
@@ -2,12 +2,12 @@
 
 **R** by default doesn't make use of multiple cores.
 With the integration of [parallelMap](https://github.com/berndbischl/parallelMap) into
-**mlr**, it becomes easy to activate the parallel computing capabilities already
-supported by **mlr**.
+[%mlr], it becomes easy to activate the parallel computing capabilities already
+supported by [%mlr].
 
 All you have to do is select an interface by calling one of the
 [parallelStart*](&parallelMap::parallelStart) functions.
-The first annotated loop **mlr** encounters will then be automatically parallelized.
+The first annotated loop [%mlr] encounters will then be automatically parallelized.
 Afterwards it is good practice to call [parallelStop](&parallelMap::parallelStop).
 
 ```{r}
