--- a/tutorial/src/task.Rmd
+++ b/tutorial/src/task.Rmd
@@ -149,7 +149,7 @@ Beygelzimer, A., Dani, V., Hayes, T., Langford, J., and Zadrozny, B.
 Error limiting reductions between classification tasks.
 In Machine Learning: Proceedings of the 22rd International Conference, pp. 49–56. ACM, 2005.
 
-For more details see the section about [cost-sensitive classification FIXME](FIXME).
+For more details see the section about [cost-sensitive classification](cost_sensitive_classif.md).
 
 
 ### Further details
